--- a/00basic/computer/linux_skills.ipynb
+++ b/00basic/computer/linux_skills.ipynb
@@ -74,8 +74,8 @@
     "%%bash\n",
     "#! /bin/bash\n",
     "\n",
-    "# File name: size-cp\n",
-    "# This script is used to copy the fastq files based on size\n",
+    "# File name: cp-for\n",
+    "# This script is used to copy the fastq files recursively.\n",
     "## $1: /file/location\n",
     "## $2: /path/to/destination\n",
     "## $3: files\n",
@@ -87,6 +87,18 @@
     "done"
    ],
    "id": "49fd00eb20d645df"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# 2 Vim\n",
+    "\n",
+    "阅读二进制文件：`vim -b {file}`\n",
+    "- 将内容转化为16进制：`:%!xxd`\n",
+    "- 将内容转化回文本格式：`:%!xxd -r`\n"
+   ],
+   "id": "54d4398c40979a66"
   }
  ],
  "metadata": {
