--- a/00basic/computer/linux_skills.ipynb
+++ b/00basic/computer/linux_skills.ipynb
@@ -92,6 +92,17 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "To check is two directories contain same files, you can first save the file name into different files:\n",
+    "- `ls 115/ > name.115`\n",
+    "Then, you can use `grep -F -x -f name.115 name.203` to check if the files in `name.115` are also in `name.203`.\n",
+    "- the directions are the same."
+   ],
+   "id": "6ed3af547cfd67e4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "# 2 Vim\n",
     "\n",
     "阅读二进制文件：`vim -b {file}`\n",
