--- a/00basic/computer/linux_skills.ipynb
+++ b/00basic/computer/linux_skills.ipynb
@@ -5,6 +5,7 @@
    "cell_type": "markdown",
    "source": [
     "# 1 Files management\n",
+    "## 1.1 recursive file management\n",
     "If you want to manage file in one directory recursively, you can use `mapfile` command.\n",
     "\n",
     "Remove files recursively:\n",
@@ -92,24 +93,30 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "## 1.2 file comparison\n",
     "To check is two directories contain same files, you can first save the file name into different files:\n",
     "- `ls 115/ > name.115`\n",
     "Then, you can use `grep -F -x -f name.115 name.203` to check if the files in `name.115` are also in `name.203`.\n",
-    "- the directions are the same."
-   ],
-   "id": "6ed3af547cfd67e4"
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": [
+    "- the directions are the same.\n",
+    "To check the difference of two files, you can use `diff` command:\n",
+    "- `diff -q file1 file2` to check if the files are different.\n",
+    "\n",
+    "## 1.3 file package and compression\n",
+    "Use `tar` to pack files: `tar -cvf {file}.tar {dir}`\n",
+    "Use `tar` to unpack files: `tar -xvf {file}.tar`\n",
+    "\n",
+    "Use `gzip` to compress files: `gzip {file}`\n",
+    "Use `pigz` to compress files: `pigz -3 {file}`\n",
+    "\n",
+    "Use `tar` to unpack compressed files: `tar -xzvf {file}.tar.gz`\n",
+    "\n",
     "# 2 Vim\n",
     "\n",
     "阅读二进制文件：`vim -b {file}`\n",
     "- 将内容转化为16进制：`:%!xxd`\n",
-    "- 将内容转化回文本格式：`:%!xxd -r`\n"
+    "- 将内容转化回文本格式：`:%!xxd -r`"
    ],
-   "id": "54d4398c40979a66"
+   "id": "6ed3af547cfd67e4"
   }
  ],
  "metadata": {
