fastcall command lines

--- a/00basic/computer/linux_skills.ipynb
+++ b/00basic/computer/linux_skills.ipynb
@@ -114,7 +114,11 @@
     "\n",
     "阅读二进制文件：`vim -b {file}`\n",
     "- 将内容转化为16进制：`:%!xxd`\n",
-    "- 将内容转化回文本格式：`:%!xxd -r`"
+    "- 将内容转化回文本格式：`:%!xxd -r`\n",
+    "\n",
+    "# 3 conda\n",
+    "\n",
+    "查看当前conda有哪些环境：`conda env list`\n"
    ],
    "id": "6ed3af547cfd67e4"
   }
