--- a/00basic/computer/linux_skills.ipynb
+++ b/00basic/computer/linux_skills.ipynb
@@ -111,14 +111,57 @@
     "Use `tar` to unpack compressed files: `tar -xzvf {file}.tar.gz`\n",
     "\n",
     "# 2 Vim\n",
-    "\n",
     "阅读二进制文件：`vim -b {file}`\n",
     "- 将内容转化为16进制：`:%!xxd`\n",
     "- 将内容转化回文本格式：`:%!xxd -r`\n",
     "\n",
     "# 3 conda\n",
+    "查看当前conda有哪些环境：`conda env list`\n",
     "\n",
-    "查看当前conda有哪些环境：`conda env list`\n"
+    "# 4 git\n",
+    "## 4.1 git setting\n",
+    "To set the git proxy, you can use the following command:\n",
+    "- `git config --global http.proxy http://10.207.199.218:7890`\n",
+    "\n",
+    "To unset the git proxy, you can use the following command:\n",
+    "- `git config --global --unset http.proxy`\n",
+    "\n",
+    "# 5 Coding Environment\n",
+    "\n",
+    "## 5.1 Java\n",
+    "\n",
+    "You can set different versions of Java for one user and transfer between by simple commands. To do this, first, you nned to install openJDKs from various sources. Here I list some:\n",
+    "1. install openJDK from oracle: https://www.oracle.com/java/technologies/downloads/\n",
+    "    - remember to install the x64 version\n",
+    "2. install from localhost:\n",
+    "    - `scp D:\\Zheng\\Documents\\2_NBS\\pack\\* *@*:~/lib`\n",
+    "\n",
+    "After you install the compressed archive openJDK to server, you can do the following steps:\n",
+    "- `cd ~/lib`\n",
+    "- `tar -xzvf jdk-8u451-linux-x64.tar.gz`\n",
+    "- `mv jdk-8u451-linux-x64.tar.gz pack/`\n",
+    "- `mv jdk1.8.0_451/ jvm/jdk-8`\n",
+    "- do the same for `jdk-17.0.15_linux-x64_bin.tar.gz` and `jdk-21_linux-x64_bin.tar.gz`\n",
+    "\n",
+    "Then, you can set `~/.bashrc` with the following lines:\n",
+    "```\n",
+    "# java\n",
+    "# different java version setting\n",
+    "## 1. fields\n",
+    "export JAVA_8_HOME=~/lib/jvm/jdk-8\n",
+    "export JAVA_17_HOME=~/lib/jvm/jdk-17\n",
+    "export JAVA_21_HOME=~/lib/jvm/jdk-21\n",
+    "## 2. default setting\n",
+    "export JAVA_HOME=$JAVA_8_HOME\n",
+    "export PATH=$JAVA_HOME/bin:$PATH\n",
+    "## 3. set version change commands\n",
+    "alias java8='export JAVA_HOME=$JAVA_8_HOME && export PATH=$JAVA_HOME/bin:$PATH'\n",
+    "alias java17='export JAVA_HOME=$JAVA_17_HOME && export PATH=$JAVA_HOME/bin:$PATH'\n",
+    "alias java21='export JAVA_HOME=$JAVA_21_HOME && export PATH=$JAVA_HOME/bin:$PATH'\n",
+    "```\n",
+    "Finally, you can use `source ~/.bashrc` to load the new settings.\n",
+    "\n",
+    "You can use `java8`, `java17` and `java21` to switch between different versions of Java and check the version of Java by using `java -version`, `echo $JAVA_HOME`, and `which java` command."
    ],
    "id": "6ed3af547cfd67e4"
   }
