more java setting

--- a/00basic/computer/linux_skills.ipynb
+++ b/00basic/computer/linux_skills.ipynb
@@ -108,16 +108,34 @@
     "Use `gzip` to compress files: `gzip {file}`\n",
     "Use `pigz` to compress files: `pigz -3 {file}`\n",
     "\n",
-    "Use `tar` to unpack compressed files: `tar -xzvf {file}.tar.gz`\n",
-    "\n",
+    "Use `tar` to unpack compressed files: `tar -xzvf {file}.tar.gz`\n"
+   ],
+   "id": "426df70c9e3a382d"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "# 2 Vim\n",
     "阅读二进制文件：`vim -b {file}`\n",
     "- 将内容转化为16进制：`:%!xxd`\n",
-    "- 将内容转化回文本格式：`:%!xxd -r`\n",
-    "\n",
+    "- 将内容转化回文本格式：`:%!xxd -r`\n"
+   ],
+   "id": "d55150daec750e0"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "# 3 conda\n",
-    "查看当前conda有哪些环境：`conda env list`\n",
-    "\n",
+    "查看当前conda有哪些环境：`conda env list`\n"
+   ],
+   "id": "f08f34354f4d9dc7"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "# 4 git\n",
     "## 4.1 git setting\n",
     "To set the git proxy, you can use the following command:\n",
@@ -125,23 +143,34 @@
     "\n",
     "To unset the git proxy, you can use the following command:\n",
     "- `git config --global --unset http.proxy`\n",
-    "\n",
+    "- "
+   ],
+   "id": "16ea964e445402"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "# 5 Coding Environment\n",
     "\n",
     "## 5.1 Java\n",
     "\n",
-    "You can set different versions of Java for one user and transfer between by simple commands. To do this, first, you nned to install openJDKs from various sources. Here I list some:\n",
+    "You can set different versions of Java for one user and transfer between by simple commands. To do this, first, you need to install openJDKs from various sources. Here I list some:\n",
     "1. install openJDK from oracle: https://www.oracle.com/java/technologies/downloads/\n",
     "    - remember to install the x64 version\n",
     "2. install from localhost:\n",
     "    - `scp D:\\Zheng\\Documents\\2_NBS\\pack\\* *@*:~/lib`\n",
     "\n",
     "After you install the compressed archive openJDK to server, you can do the following steps:\n",
-    "- `cd ~/lib`\n",
-    "- `tar -xzvf jdk-8u451-linux-x64.tar.gz`\n",
-    "- `mv jdk-8u451-linux-x64.tar.gz pack/`\n",
-    "- `mv jdk1.8.0_451/ jvm/jdk-8`\n",
-    "- do the same for `jdk-17.0.15_linux-x64_bin.tar.gz` and `jdk-21_linux-x64_bin.tar.gz`\n",
+    "1. `cd ~/lib`\n",
+    "2. `tar -xzvf jdk-8u451-linux-x64.tar.gz`\n",
+    "3. `tar -xzvf jdk-17.0.15_linux-x64_bin.tar.gz`\n",
+    "4. `tar -xzvf jdk-21_linux-x64_bin.tar.gz`\n",
+    "5. `mkdir jvm pack`\n",
+    "6. `mv jdk-17.0.15_linux-x64_bin.tar.gz jdk-21_linux-x64_bin.tar.gz jdk-8u451-linux-x64.tar.gz pack/`\n",
+    "7. `mv mv jdk1.8.0_451/ jvm/jdk-8`\n",
+    "8. `mv jdk-17.0.15/ jvm/jdk-17`\n",
+    "9. `mv jdk-21.0.7/ jvm/jdk-21`\n",
     "\n",
     "Then, you can set `~/.bashrc` with the following lines:\n",
     "```\n",
@@ -159,9 +188,73 @@
     "alias java17='export JAVA_HOME=$JAVA_17_HOME && export PATH=$JAVA_HOME/bin:$PATH'\n",
     "alias java21='export JAVA_HOME=$JAVA_21_HOME && export PATH=$JAVA_HOME/bin:$PATH'\n",
     "```\n",
-    "Finally, you can use `source ~/.bashrc` to load the new settings.\n",
+    "Finally, run `source ~/.bashrc` to load the new settings.\n",
     "\n",
-    "You can use `java8`, `java17` and `java21` to switch between different versions of Java and check the version of Java by using `java -version`, `echo $JAVA_HOME`, and `which java` command."
+    "You can use `java8`, `java17` and `java21` to switch between different versions of Java and check the version of Java by using `java -version`, `echo $JAVA_HOME`, and `which java` command.\n"
+   ],
+   "id": "1e6cc89f406c25f"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# 6 perf\n",
+    "\n",
+    "## 6.1 install perf\n",
+    "\n",
+    "To install `perf`, you should have root permission.\n",
+    "\n",
+    "First, I tried `sudo yum install -y perf` to install, but it failed with the following error:\n",
+    "```\n",
+    "已加载插件：fastestmirror, langpacks\n",
+    "Loading mirror speeds from cached hostfile\n",
+    "Could not retrieve mirrorlist http://mirrorlist.centos.org/?release=7&arch=x86_64&repo=os&infra=stock error was\n",
+    "14: curl#6 - \"Could not resolve host: mirrorlist.centos.org; 未知的错误\"\n",
+    "\n",
+    "\n",
+    " One of the configured repositories failed (未知),\n",
+    " and yum doesn't have enough cached data to continue. At this point the only\n",
+    " safe thing yum can do is fail. There are a few ways to work \"fix\" this:\n",
+    "\n",
+    "     1. Contact the upstream for the repository and get them to fix the problem.\n",
+    "\n",
+    "     2. Reconfigure the baseurl/etc. for the repository, to point to a working\n",
+    "        upstream. This is most often useful if you are using a newer\n",
+    "        distribution release than is supported by the repository (and the\n",
+    "        packages for the previous distribution release still work).\n",
+    "\n",
+    "     3. Run the command with the repository temporarily disabled\n",
+    "            yum --disablerepo=<repoid> ...\n",
+    "\n",
+    "     4. Disable the repository permanently, so yum won't use it by default. Yum\n",
+    "        will then just ignore the repository until you permanently enable it\n",
+    "        again or use --enablerepo for temporary usage:\n",
+    "\n",
+    "            yum-config-manager --disable <repoid>\n",
+    "        or\n",
+    "            subscription-manager repos --disable=<repoid>\n",
+    "\n",
+    "     5. Configure the failing repository to be skipped, if it is unavailable.\n",
+    "        Note that yum will try to contact the repo. when it runs most commands,\n",
+    "        so will have to try and fail each time (and thus. yum will be be much\n",
+    "        slower). If it is a very temporary problem though, this is often a nice\n",
+    "        compromise:\n",
+    "\n",
+    "            yum-config-manager --save --setopt=<repoid>.skip_if_unavailable=true\n",
+    "\n",
+    "Cannot find a valid baseurl for repo: base/7/x86_64\n",
+    "```\n",
+    "Then I tried to install `kernel-tools` and `kernel-debuginfo`. \n",
+    "1. First, I tried `uname -a` to check the centOS version of 115 server, which is `3.10.0-1127.el7.x86_64`. \n",
+    "2. Then I search https://mirrors.aliyun.com/centos/7/os/x86_64/Packages/ for two packages, but I can only find the `kernel-tools-3.10.0-1160.el7.x86_64.rpm` version. \n",
+    "3. With more efforts, I found that all the `rpm` files are in https://vault.centos.org/7.7.1908/os/x86_64/Packages/.\n",
+    "4. Finally, I found\n",
+    "    - https://vault.centos.org/7.7.1908/os/x86_64/Packages/kernel-tools-3.10.0-1062.el7.x86_64.rpm\n",
+    "    - https://vault.centos.org/7.7.1908/os/x86_64/Packages/kernel-debug-3.10.0-1062.el7.x86_64.rpm\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ],
    "id": "6ed3af547cfd67e4"
   }
