--- a/00basic/computer/linux_skills.ipynb
+++ b/00basic/computer/linux_skills.ipynb
@@ -117,9 +117,12 @@
    "cell_type": "markdown",
    "source": [
     "# 2 Vim\n",
+    "\n",
     "阅读二进制文件：`vim -b {file}`\n",
     "- 将内容转化为16进制：`:%!xxd`\n",
-    "- 将内容转化回文本格式：`:%!xxd -r`\n"
+    "- 将内容转化回文本格式：`:%!xxd -r`\n",
+    "\n",
+    "删除范围内的行：`:1,10d`\n"
    ],
    "id": "d55150daec750e0"
   },
@@ -248,15 +251,146 @@
     "1. First, I tried `uname -a` to check the centOS version of 115 server, which is `3.10.0-1127.el7.x86_64`. \n",
     "2. Then I search https://mirrors.aliyun.com/centos/7/os/x86_64/Packages/ for two packages, but I can only find the `kernel-tools-3.10.0-1160.el7.x86_64.rpm` version. \n",
     "3. With more efforts, I found that all the `rpm` files are in https://vault.centos.org/7.7.1908/os/x86_64/Packages/.\n",
-    "4. Finally, I found\n",
+    "4. I these found from internet, but they are not what I want:\n",
     "    - https://vault.centos.org/7.7.1908/os/x86_64/Packages/kernel-tools-3.10.0-1062.el7.x86_64.rpm\n",
     "    - https://vault.centos.org/7.7.1908/os/x86_64/Packages/kernel-debug-3.10.0-1062.el7.x86_64.rpm\n",
+    "5. Finally, I tried different versions of centOS on https://vault.centos.org/ and found what I want on https://vault.centos.org/7.8.2003/os/x86_64/Packages/\n",
+    "    - https://vault.centos.org/7.8.2003/os/x86_64/Packages/kernel-tools-libs-3.10.0-1127.el7.x86_64.rpm\n",
+    "    - https://vault.centos.org/7.8.2003/os/x86_64/Packages/kernel-tools-3.10.0-1127.el7.x86_64.rpm\n",
+    "    - https://vault.centos.org/7.8.2003/os/x86_64/Packages/kernel-debug-3.10.0-1127.el7.x86_64.rpm\n",
+    "\n",
+    "Then I run `perf`, but can't find the command. As I check the `perf` in `kernel-tools`, I found the `perf` tool is not installed. I need to install it by running `./configure`, `make`, and `make install`. While I was doing this, I realize that I should install more dependencies. Therefore, I give up to install `perf` by `rpm`.\n",
+    "\n",
+    "Finally, I tried to update the `yum` source by the following commands: "
+   ],
+   "id": "6e4b1fd03fb5c383"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "%%bash\n",
+    "\n",
+    "# backup the original yum repository files\n",
+    "sudo mkdir -p /etc/yum.repos.d/backup\n",
+    "sudo mv /etc/yum.repos.d/CentOS-*.repo /etc/yum.repos.d/backup/\n",
+    "\n",
+    "# create a new yum repository file for CentOS Vault\n",
+    "sudo tee /etc/yum.repos.d/CentOS-Vault.repo <<EOF\n",
+    "[vault]\n",
+    "name=CentOS-7 - Vault\n",
+    "baseurl=http://vault.centos.org/7.9.2009/os/\\$basearch/\n",
+    "gpgcheck=1\n",
+    "gpgkey=file:///etc/pki/rpm-gpg/RPM-GPG-KEY-CentOS-7\n",
+    "enabled=1\n",
+    "EOF\n",
+    "\n",
+    "# update the yum cache\n",
+    "sudo yum clean all\n",
+    "sudo yum install -y make gcc elfutils-libelf-devel flex bison"
+   ],
+   "id": "375187fedd691cfe"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Then I run `sudo yum install -y perf`, it works!\n",
+    "\n",
+    "## 6.2 perf setting for non-root user\n",
+    "\n",
+    "1. Change the kernel parameters for perf:\n",
+    "```\n",
+    "echo \"kernel.perf_event_paranoid = -1\" | sudo tee /etc/sysctl.d/perf.conf\n",
+    "sudo sysctl -p /etc/sysctl.d/perf.conf\n",
+    "```\n",
+    "2. change the permissions of files and directories used by perf\n",
+    "```\n",
+    "sudo chmod a+rw /sys/kernel/debug/tracing/\n",
+    "sudo chmod a+rw /dev/cpu/*/msr  # 如果使用 MSR 寄存器（如 `perf stat -e cycles`）\n",
+    "```\n",
+    "\n",
+    "## 6.3 perf used to analyze Java programs\n",
+    "\n",
+    "First, I perform CPU statistics on a Java program:\n",
+    "```\n",
+    "perf stat -e cycles,instructions,cache-misses,branch-misses java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a ../00data/chr1_10M.fa -b taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 1 -m 32 -n ../disc/ -o /data/home/dazheng/miniconda3/envs/debug/bin/samtools\n",
+    "```\n",
+    "1. `cycles`: CPU cycles, the absolute time the CPU is running\n",
+    "2. `instructions`: sum instructions executed\n",
+    "    - `ins per cycle (IPC)`: higher IPC means better performance, usually above 1.0 is good (1 to 2)\n",
+    "3. `cache-misses`: cache misses, may lead to performance degradation\n",
+    "4. `branch-misses`: branch predict misses, high branch misses may lead to thread performance\n",
+    "\n",
+    "The output of the command is like this:\n",
+    "```\n",
+    " Performance counter stats for 'java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a ../00data/chr1_10M.fa -b taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 1 -m 32 -n ../disc/ -o /data/home/dazheng/miniconda3/envs/debug/bin/samtools':\n",
+    "\n",
+    " 6,144,293,791,989      cycles\n",
+    "12,584,723,198,969      instructions              #    2.05  insn per cycle\n",
+    "    23,071,128,363      cache-misses\n",
+    "    11,975,545,242      branch-misses\n",
+    "\n",
+    "     128.175826763 seconds time elapsed\n",
+    "\n",
+    "    5549.520810000 seconds user\n",
+    "     635.074609000 seconds sys\n",
+    "```\n",
+    "analysis:\n",
+    "1. Although the IPC is 2.05, which is good, the cache misses and branch misses are very high, which may lead to performance degradation.\n",
+    "    - use `perf record -e cache-misses -g` to locate hotspots code, improve local cache usage\n",
+    "2. Use `branches` to count more about branches\n",
+    "3. Recorded times are:\n",
+    "    - `time elapsed`: time in the real-world taken by the command\n",
+    "    - `user`: time spent in user space (addition of all threads)\n",
+    "    - `sys`: time spent in kernel space (system calls, I/O operations, etc.)\n",
+    "4. High sys time may source from frequent I/O operations or lock contention\n",
+    "    - use `perf record -e syscalls:sys_enter_*` to analyze system calls\n",
+    "\n",
+    "Run `perf stat -e cycles,instructions,cache-misses,branches,branch-misses java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a ./00data/chr1_10M.fa -b taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 1 -m 32 -n ../disc/ -o /data/home/dazheng/miniconda3/envs/debug/bin/samtools > perf.log`. I get the following output:\n",
+    "```\n",
+    " Performance counter stats for 'java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a ../00data/chr1_10M.fa -b taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 1 -m 32 -n ../disc/ -o /data/home/dazheng/miniconda3/envs/debug/bin/samtools':\n",
+    "\n",
+    " 6,200,993,415,974      cycles\n",
+    "12,628,342,484,101      instructions              #    2.04  insn per cycle\n",
+    "    23,131,657,000      cache-misses\n",
+    " 2,466,785,321,848      branches\n",
+    "    11,998,386,966      branch-misses             #    0.49% of all branches\n",
+    "\n",
+    "     129.766272954 seconds time elapsed\n",
+    "\n",
+    "    5658.384766000 seconds user\n",
+    "     592.448297000 seconds sys\n",
+    "```\n",
+    "Then I run `perf record` to find more debug information.\n",
+    "\n",
+    "1. `perf record -e cache-misses -g -- java -Xmx100g -jar TIGER_20250526.jar -app FastCall2 -mod disc -a ../00data/chr1_10M.fa -b taxaBamMap.txt -c 0 -d 30 -e 20 -f 2 -g 0.2 -h 3 -i 0.8 -j 0.35 -k 0.2 -l 1 -m 32 -n ../disc/ -o /data/home/dazheng/miniconda3/envs/debug/bin/samtools`\n",
+    "\n",
+    "The output is like this:\n",
+    "```\n",
+    "[ perf record: Woken up 518 times to write data ]\n",
+    "Warning:\n",
+    "15 out of order events recorded.\n",
+    "[ perf record: Captured and wrote 1458.668 MB perf.data (16413076 samples) ]\n",
+    "```\n",
+    "Then I run `nohup perf script > out.perf &` to analyze the `perf.data` file, after which I get the `out.perf` file. Finally, I run `nohup FlameGraph/stackcollapse-perf.pl out.perf | FlameGraph/flamegraph.pl > flame.svg &` to generate the flame graph, with scripts from https://github.com/brendangregg/FlameGraph. \n",
+    "\n",
     "\n",
     "\n",
     "\n",
     "\n"
    ],
    "id": "6ed3af547cfd67e4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "33355af0a2cd3621"
   }
  ],
  "metadata": {
