--- a/00basic/02debug_fastcall2.ipynb
+++ b/00basic/02debug_fastcall2.ipynb
@@ -39,7 +39,35 @@
     "        at pgl.PGLAPPEntrance.runApp(PGLAPPEntrance.java:51)\n",
     "        at pgl.PGLAPPEntrance.<init>(PGLAPPEntrance.java:27)\n",
     "        at pgl.PGLAPPEntrance.main(PGLAPPEntrance.java:85)\n",
-    "```\n"
+    "```\n",
+    "\n",
+    "When I tried to run `disc` for 4806 samples, I got the error message:\n",
+    "```\n",
+    "java.io.FileNotFoundException: /data/home/tusr1/02callSNP/lib/../disc/Becard/Kachu-2/1_1_5000001.ing.gz (No such file or directory)\n",
+    "        at java.io.FileOutputStream.open0(Native Method)\n",
+    "        at java.io.FileOutputStream.open(FileOutputStream.java:270)\n",
+    "        at java.io.FileOutputStream.<init>(FileOutputStream.java:213)\n",
+    "        at java.io.FileOutputStream.<init>(FileOutputStream.java:101)\n",
+    "        at pgl.infra.utils.IOUtils.getBinaryGzipWriter(IOUtils.java:115)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.setDos(DiscoverVariation.java:384)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.writeVariants(DiscoverVariation.java:400)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:422)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:243)\n",
+    "        at java.util.concurrent.FutureTask.run(FutureTask.java:266)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
+    "        at java.lang.Thread.run(Thread.java:750)\n",
+    "java.lang.NullPointerException\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.setDos(DiscoverVariation.java:386)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.writeVariants(DiscoverVariation.java:400)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:422)\n",
+    "        at pgl.app.fastCall2.DiscoverVariation$TaxonCall.call(DiscoverVariation.java:243)\n",
+    "        at java.util.concurrent.FutureTask.run(FutureTask.java:266)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1149)\n",
+    "        at java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:624)\n",
+    "        at java.lang.Thread.run(Thread.java:750)\n",
+    "```\n",
+    "This is because `@SM` of some samples contains `/`, which is not allowed in the file name. Therefore, I finally choose `CRR` code as the `Taxa` in `taxaBamMap.txt` file."
    ],
    "id": "7aa519d730581b71"
   }
