--- a/00basic/computer/python_skills.ipynb
+++ b/00basic/computer/python_skills.ipynb
@@ -5,33 +5,24 @@
    "cell_type": "markdown",
    "source": [
     "# Conda\n",
-    "## mamba\n",
+    "## basic\n",
     "\n",
-    "mamba 与conda 创建一个独立的python环境步骤一样，首先需要创建一个环境，然后激活环境。\n",
-    "\n",
-    "mamba 创建环境： `mamba create -n XXX python=3.9`\n",
-    "\n",
-    "XXX为创建环境的名称，python= 这里我选择用python3.9.\n",
-    "\n",
-    "激活环境： `conda activate XXX`\n",
-    "\n",
-    "退出环境：`conda deactivate xxx`\n",
-    "\n",
-    "安装包：`mamba install xxx`\n",
-    "\n",
-    "移除包：`mamba/conda remove -n xxx` XXX 第一个为环境名称，第二个为包名称\n",
-    "\n",
-    "更新包：`mamba update XXX`\n",
-    "\n",
-    "更新python：`mamba update python`\n",
-    "\n",
-    "移除环境： `conda/mamba remove -n XXX --all`\n",
-    "\n",
-    "导出环境： `conda env export xxx.yaml` 将现有的包导出，方便以后直接创建环境\n",
+    "basic commands:\n",
+    "1. create: `mamba create -n XXX python=3.9`\n",
+    "2. activate environment: `conda activate xxx`\n",
+    "3. exit environment: `conda deactivate xxx`\n",
+    "4. install package and set version: `conda install xxx=1.18`\n",
+    "5. remove package: `conda remove -n xxx xxx`\n",
+    "    - first xxx: env name\n",
+    "    - secondary xxx: package name\n",
+    "6. update package: `conda update xxx`\n",
+    "7. update python: `conda update python`\n",
+    "8. remove environment: `conda remove -n xxx --all`\n",
+    "9. export existing packages, can be used to create environment directly: `conda env export xxx.yaml`\n",
     "\n",
     "## Python\n",
     "\n",
-    "mac osx-arm64 不支持 python2.7的问题：\n",
+    "To solve problem that `mac osx-arm64` do not support `python2.7`:\n",
     "```\n",
     "conda create -n p27\n",
     "conda activate p27\n",
