--- a/00basic/computer/perf_analysis.ipynb
+++ b/00basic/computer/perf_analysis.ipynb
@@ -257,7 +257,14 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "Then, use the ipc.R and brc.R scripts to analyze the IPC and branch miss information. These scripts are in script/01vmap4/debugFC2 directory.",
+   "source": [
+    "Then, use the ipc.R and brc.R scripts to analyze the IPC and branch miss information. These scripts are in script/01vmap4/debugFC2 directory.\n",
+    "\n",
+    "## 3.3 Check CPU usage\n",
+    "\n",
+    "monitor L1d and L1i cache for some programs:\n",
+    "- `perf stat -e L1-dcache-load-misses,L1-icache-load-misses ./program`"
+   ],
    "id": "760067b6dee34ceb"
   },
   {
@@ -328,7 +335,7 @@
     "      \"location\": null,                        \n",
     "      \"photos\": [],                            \n",
     "      \"is_starred\": false,                     \n",
-    "      \"word_count\": 0                          \n",
+    "      \"word_count\": 0\n",
     "    }\n",
     "  ],\n",
     "  \"tags\": [\n",
