--- a/00basic/02debug_fastcall2.ipynb
+++ b/00basic/02debug_fastcall2.ipynb
@@ -334,6 +334,15 @@
     "\n"
    ],
    "id": "80f60fff8be5a4a4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "# 2 perf analysis\n",
+    "\n"
+   ],
+   "id": "97d9eefe9039c843"
   }
  ],
  "metadata": {
