--- a/note/00basic/03vcf_process.ipynb
+++ b/note/00basic/03vcf_process.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "c81098c8",
-   "metadata": {},
+   "metadata": {
+    "notebookRunGroups": {
+     "groupValue": "1"
+    }
+   },
    "outputs": [],
    "source": [
     "%%bash\n",
@@ -32,32 +36,16 @@
     "    --autosome-num 42 \\\n",
     "    -missing\n",
     "\n",
-    "# R画缺失率\n",
-    "indmiss<-read.table(file=\"plink.imiss\", header=TRUE)\n",
-    "snpmiss<-read.table(file=\"plink.lmiss\", header=TRUE)\n",
-    "pdf(\"imiss.pdf\")\n",
-    "hist(indmiss[,6],main=\"Histogram individual missingness\")\n",
-    "pdf(\"lmiss.pdf\")\n",
-    "hist(snpmiss[,5],main=\"Histogram SNP missingness\")\n",
-    "dev.off()\n",
-    "\n",
     "# 查看maf\n",
     "plink --file output \\\n",
     "    --autosome-num 42 \\\n",
     "    --freq \\\n",
     "    --out MAF_check\n",
     "\n",
-    "# R画maf图\n",
-    "maf_freq <- read.table(\"MAF_check.frq\", header =TRUE, as.is=T)\n",
-    "pdf(\"MAF_distribution.pdf\")\n",
-    "hist(maf_freq[,5],main = \"MAF distribution\", xlab = \"MAF\")\n",
-    "dev.off()\n",
-    "\n",
     "# 查看杂合度\n",
     "plink --file output \\\n",
     "    --het \\\n",
-    "    --out R_check\n",
-    "\n"
+    "    --out R_check"
    ]
   },
   {
@@ -72,6 +60,21 @@
    "outputs": [],
    "source": [
     "%%r\n",
+    "\n",
+    "# R画缺失率\n",
+    "indmiss<-read.table(file=\"plink.imiss\", header=TRUE)\n",
+    "snpmiss<-read.table(file=\"plink.lmiss\", header=TRUE)\n",
+    "pdf(\"imiss.pdf\")\n",
+    "hist(indmiss[,6],main=\"Histogram individual missingness\")\n",
+    "pdf(\"lmiss.pdf\")\n",
+    "hist(snpmiss[,5],main=\"Histogram SNP missingness\")\n",
+    "dev.off()\n",
+    "\n",
+    "# R画maf图\n",
+    "maf_freq <- read.table(\"MAF_check.frq\", header =TRUE, as.is=T)\n",
+    "pdf(\"MAF_distribution.pdf\")\n",
+    "hist(maf_freq[,5],main = \"MAF distribution\", xlab = \"MAF\")\n",
+    "dev.off()\n",
     "\n",
     "# R画杂合度\n",
     "het <- read.table(\"heter_check.het\", head=TRUE)\n",
